--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-cdk/aws-ecs": "^1.194.0",
+    "@aws-cdk/core": "^1.194.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -24,21 +26,22 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/webpack": "15.7.2",
     "@nrwl/workspace": "15.7.2",
-    "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "aws-cdk-lib": "2.66.1",
+    "constructs": "^10.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "28.1.1",
+    "jest": "^29.4.2",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
-    "ts-jest": "28.0.5",
+    "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.9.5"
   },
-
   "volta": {
     "node": "18.14.2",
     "npm": "9.5.0"
