--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.194.0",
     "@aws-cdk/aws-ecs": "^1.194.0",
     "@aws-cdk/core": "^1.194.0",
     "@nestjs/common": "^9.0.0",
@@ -30,7 +31,7 @@
     "@types/node": "18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "aws-cdk-lib": "2.66.1",
+    "aws-cdk-lib": "^2.66.1",
     "constructs": "^10.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
