bootstrapping cdk done

--- a/apps/knitting-backend/tsconfig.json
+++ b/apps/knitting-backend/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
+  "exclude": [
+    "cdk.out"
+  ],
   "references": [
     {
       "path": "./tsconfig.app.json"
