--- a/apps/knitting-backend/project.json
+++ b/apps/knitting-backend/project.json
@@ -56,6 +56,66 @@
           "codeCoverage": true
         }
       }
+    },
+    "prisma-generate": {
+      "executor": "@nx-tools/nx-prisma:generate",
+      "options": {
+        "schema": "prisma/schema.prisma"
+      }
+    },
+    "prisma-migrate": {
+      "executor": "@nx-tools/nx-prisma:migrate",
+      "options": {
+        "schema": "prisma/schema.prisma"
+      }
+    },
+    "prisma-pull": {
+      "executor": "@nx-tools/nx-prisma:pull",
+      "options": {
+        "schema": "prisma/schema.prisma"
+      }
+    },
+    "prisma-push": {
+      "executor": "@nx-tools/nx-prisma:push",
+      "options": {
+        "schema": "prisma/schema.prisma"
+      }
+    },
+    "prisma-deploy": {
+      "executor": "@nx-tools/nx-prisma:deploy",
+      "options": {
+        "schema": "prisma/schema.prisma"
+      }
+    },
+    "prisma-status": {
+      "executor": "@nx-tools/nx-prisma:status",
+      "options": {
+        "schema": "prisma/schema.prisma"
+      }
+    },
+    "prisma-studio": {
+      "executor": "@nx-tools/nx-prisma:studio",
+      "options": {
+        "schema": "prisma/schema.prisma"
+      }
+    },
+    "infra-bootstrap": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "cdk bootstrap aws://774741736765/eu-north-1"
+        ]
+      }
+
+    },
+    "infra-deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "cdk"
+        ]
+      }
+
     }
   },
   "tags": []
