--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.5.0",
     "axios": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
@@ -27,6 +28,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/webpack": "15.7.2",
     "@nrwl/workspace": "15.7.2",
+    "@nx-tools/nx-prisma": "^4.0.3",
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -39,6 +41,7 @@
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
+    "prisma": "^4.5.0",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
