--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.194.0",
-    "@aws-cdk/aws-ecs": "^1.194.0",
-    "@aws-cdk/core": "^1.194.0",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
