--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "aws-cdk-lib": "^2.0.0",
-    "constructs": "^10.0.0",
+    "@aws-cdk/assert": "^1.127.0",
+    "@aws-cdk/core": "^1.127.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.5.0",
+    "aws-cdk-lib": "^2.0.0",
     "axios": "^1.0.0",
+    "constructs": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@codebrew/nx-aws-cdk": "^1.0.3",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/eslint-plugin-nx": "15.7.2",
@@ -36,6 +39,7 @@
     "constructs": "^10.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cdk": "^1.3.0",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.7.2",
