migrations work, well generate and run does

--- a/apps/infrastructure/project.json
+++ b/apps/infrastructure/project.json
@@ -6,7 +6,9 @@
   "targets": {
     "deploy": {
       "executor": "@codebrew/nx-aws-cdk:deploy",
-      "options": {}
+      "options": {
+        "require-approval": "never"
+      }
     },
     "destroy": {
       "executor": "@codebrew/nx-aws-cdk:destroy",
