--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
   "name": "knitting-things",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "typeorm": " "
+  },
   "private": true,
   "dependencies": {
     "@aws-cdk/assert": "^1.127.0",
     "@aws-cdk/core": "^1.127.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@prisma/client": "^4.5.0",
     "aws-cdk-lib": "^2.0.0",
     "axios": "^1.0.0",
     "constructs": "^10.0.0",
+    "mysql2": "^3.1.2",
+    "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@codebrew/nx-aws-cdk": "^1.0.3",
@@ -30,7 +37,6 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/webpack": "15.7.2",
     "@nrwl/workspace": "15.7.2",
-    "@nx-tools/nx-prisma": "^4.0.3",
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -44,9 +50,8 @@
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
-    "prisma": "^4.5.0",
     "ts-jest": "^29.0.5",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "volta": {
